test/error/OpIsNotPtr.fu
public class Base
{
}

public class Test : Base
{
	public static bool Run()
	{
		int i = 5;
		Test() o;
		Base! p = o;
		return i is Test //ERROR: Left hand side of the 'is' operator must be an object reference
			&& o is Test //ERROR: Left hand side of the 'is' operator must be an object reference
			&& p is Test() o2; //ERROR: 'is' with non-reference type
	}
}
